# src/backend/Conference/ConferenceExample.Conference.Application/UpdateConferenceDetails/IUpdateConferenceDetailsCommandHandler.cs
@@ -1,0 +1,6 @@
+namespace ConferenceExample.Conference.Application.UpdateConferenceDetails;
+
+public interface IUpdateConferenceDetailsCommandHandler
+{
+    Task Handle(UpdateConferenceDetailsCommand command);
+}
